--- a/src/assets/style/_base.scss
+++ b/src/assets/style/_base.scss
@@ -271,3 +271,13 @@ ul {
     margin: 0;
     padding: 0;
 }
+
+// fade transition
+.fade-enter,
+.fade-leave-active{
+  opacity: 0 !important;
+}
+.fade-enter-active,
+.fade-leave-active{
+  transition: opacity .5s;
+}
