增加fastclick,保持topicList滚动条位置

--- a/src/assets/style/_variable.scss
+++ b/src/assets/style/_variable.scss
@@ -1,7 +1,7 @@
 $baseFontSize : 100px !default;
 $mainColor : #80bd01;
 $good : $mainColor;
-$grey : #999;
+$grey : rgba(0,0,0,0.5);
 $share : #d2ad03;
 $job : #5bc0de;
 $ask : #e64800;
